feat(impl):[TRI-1216] Add additiional listener to JobProcessingFinishedEvent event - remove code smells